--- a/MS3000_defaultconfig/admin.html
+++ b/MS3000_defaultconfig/admin.html
@@ -32,8 +32,9 @@
 
   <a href="settings/ui">settings/ui</a><br>
   <form enctype="multipart/form-data" action="settings/ui/set" method="get">
-    powerdownTimeUSB <input type="text" name="powerdownTimeUSB" />
-    powerdownTimeBattery <input type="text" name="powerdownTimeBattery" />
+    initialMode <input type="text" name="initialMode" />
+    timeoutHighPower <input type="text" name="timeoutHighPower" />
+    timeoutLowPower <input type="text" name="timeoutLowPower" />
     defaultBrightness <input type="text" name="defaultBrightness" />
     <input type="submit" value="set ui config" />
   </form>
