--- a/MS3000_defaultconfig/admin.html
+++ b/MS3000_defaultconfig/admin.html
@@ -67,9 +67,13 @@
     <a href="/leds?b=//8AAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8A/wD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA/w==">
       red / green / blue </a><br><br>
 
-    <a href="/mode?m=0">mode 0 pysics sim</a><br>
-    <a href="/mode?m=1">mode 1 remoteLeds</a><br>
-    <a href="/mode?m=4">mode 4 POV</a><br>
+    <a href="/mode?m=0">Image Shake</a><br>
+    <a href="/mode?m=1">Light Shows</a><br>
+    <a href="/mode?m=2">Compass</a><br>
+    <a href="/mode?m=3">System Values</a><br>
+    <a href="/mode?m=4">Remote-LED</a><br>
+    <a href="/mode?m=5">Beat Detection</a><br>
+
     <br>
 
     <a href="restart">RESTART</a><br>
